--- a/index.html
+++ b/index.html
@@ -6,47 +6,47 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
     <link rel="stylesheet" href="style.css" media="screen">
   </head>
-  <body>
-    <section class="aaa">
+  <body class="body">
+    <section class="img-details">
       <img src="./eisenhower-matrix.jpg">
-      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <a class="img-details__info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </section>
-    <section class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList">
-        <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
-          <input id="new-task" class="task" type="text">
-          <button>Add</button>
+    <section class="main-page">
+      <p class="adding-item-section">
+        <label for="task-input">Add Item</label>
+        <div class="task-form">
+          <input class="task-form__input" type="text">
+          <button class="btn-add">Add</button>
         </div>
      </p>
     <h3>Todo</h3>
-    <ul id="incompleteTasks">
+    <ul class="incomplete-tasks">
       <li>
         <input type="checkbox">
-        <label class="task">Pay Bills</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
+        <label class="incomplete-tasks__task">Pay Bills</label>
+        <input type="text" class="incomplete-tasks__task">
+        <button class="btn-edit">Edit</button>
+        <button class="btn-delete">
           <img src="./remove.svg">
         </button>
       </li>
-      <li class="editMode">
+      <li class="edit-mode">
         <input type="checkbox">
-        <label class="task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task">
-        <button class="edit">Save</button>
-        <button class="delete">
+        <label class="edit-mode__task">Go Shopping</label>
+        <input type="text" value="Go Shopping" class="edit-mode__task">
+        <button class="btn-edit">Save</button>
+        <button class="btn-delete">
           <img src="./remove.svg">
         </button>
       </li>
     </ul>
     <h3>Completed</h3>
-    <ul id="completed-tasks">
+    <ul class="completed-tasks">
       <li><input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
+        <label class="completed-tasks__task">See the Doctor</label>
+        <input type="text" class="completed-tasks__task">
+        <button class="btn-edit">Edit</button>
+        <button class="btb-delete">
           <img src="./remove.svg">
         </button>
       </li>
