refactor: change class name and add space near tag li according to rule 1.2 and 3.1 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
      </p>
     <h3>Todo</h3>
     <ul class="incomplete-tasks">
-      <li>
+      <li class="incomplete-item">
         <input type="checkbox">
-        <label class="incomplete-tasks__task">Pay Bills</label>
-        <input type="text" class="incomplete-tasks__task">
+        <label class="incomplete-item__task">Pay Bills</label>
+        <input type="text" class="incomplete-item__task">
         <button class="btn-edit">Edit</button>
         <button class="btn-delete">
           <img src="./remove.svg">
@@ -42,11 +42,12 @@
     </ul>
     <h3>Completed</h3>
     <ul class="completed-tasks">
-      <li><input type="checkbox" checked>
-        <label class="completed-tasks__task">See the Doctor</label>
-        <input type="text" class="completed-tasks__task">
+      <li class="completed-item">
+        <input type="checkbox" checked>
+        <label class="completed-item__task">See the Doctor</label>
+        <input type="text" class="completed-item__task">
         <button class="btn-edit">Edit</button>
-        <button class="btb-delete">
+        <button class="btn-delete">
           <img src="./remove.svg">
         </button>
       </li>
