refactor: add class name to tag h3 according to rule 3.1 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </button>
       </li>
     </ul>
-    <h3>Completed</h3>
+    <h3 class="complte-text">Completed</h3>
     <ul class="completed-tasks">
       <li class="completed-item">
         <input type="checkbox" checked>
