--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <button class="btn-add">Add</button>
         </div>
      </p>
-    <h3>Todo</h3>
+    <h3 class="todo-text">Todo</h3>
     <ul class="incomplete-tasks">
       <li class="incomplete-item">
         <input type="checkbox">
