refactor: add class name to tags according rule 3.1 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h3 class="todo-text">Todo</h3>
     <ul class="incomplete-tasks">
       <li class="incomplete-item">
-        <input type="checkbox">
+        <input class="item-checkbox" type="checkbox">
         <label class="incomplete-item__task">Pay Bills</label>
         <input type="text" class="incomplete-item__task">
         <button class="btn-edit">Edit</button>
@@ -31,7 +31,7 @@
         </button>
       </li>
       <li class="edit-mode">
-        <input type="checkbox">
+        <input class="item-checkbox" type="checkbox">
         <label class="edit-mode__task">Go Shopping</label>
         <input type="text" value="Go Shopping" class="edit-mode__task">
         <button class="btn-edit">Save</button>
@@ -43,9 +43,9 @@
     <h3 class="complte-text">Completed</h3>
     <ul class="completed-tasks">
       <li class="completed-item">
-        <input type="checkbox" checked>
+        <input class="item-checkbox" type="checkbox" checked>
         <label class="completed-item__task">See the Doctor</label>
-        <input type="text" class="completed-item__task">
+        <input class="completed-item__task" type="text">
         <button class="btn-edit">Edit</button>
         <button class="btn-delete">
           <img src="./remove.svg">
