fix: add class name for img tag

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="body">
     <section class="img-details">
-      <img src="./eisenhower-matrix.jpg">
+      <img class="img-details__matrix" src="./eisenhower-matrix.jpg">
       <a class="img-details__info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </section>
     <section class="main-page">
@@ -27,7 +27,7 @@
         <input class="incomplete-item__input" type="text">
         <button class="btn-edit">Edit</button>
         <button class="btn-delete">
-          <img src="./remove.svg">
+          <img class="btn-delete-icon" src="./remove.svg">
         </button>
       </li>
       <li class="edit-mode">
@@ -36,7 +36,7 @@
         <input class="edit-mode__input" type="text" value="Go Shopping">
         <button class="btn-edit">Save</button>
         <button class="btn-delete">
-          <img src="./remove.svg">
+          <img class="btn-delete-icon" src="./remove.svg">
         </button>
       </li>
     </ul>
@@ -48,7 +48,7 @@
         <input class="completed-item__input" type="text">
         <button class="btn-edit">Edit</button>
         <button class="btn-delete">
-          <img src="./remove.svg">
+          <img class="btn-delete-icon" src="./remove.svg">
         </button>
       </li>
     </ul>
