--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
       <div class="adding-item-section">
         <h3 class="task-input">Add Item</h3>
         <div class="task-form">
-          <input class="task-form__input" type="text">
+          <input class="task-form__input task" type="text">
           <button class="btn-add">Add</button>
         </div>
      </div>
+     <p></p>
     <h3 class="todo-text">Todo</h3>
     <ul class="incomplete-tasks">
       <li class="incomplete-item">
         <input class="item-checkbox" type="checkbox">
-        <label class="incomplete-item__task">Pay Bills</label>
+        <label class="incomplete-item__task task">Pay Bills</label>
         <input class="incomplete-item__input" type="text">
         <button class="btn-edit">Edit</button>
         <button class="btn-delete">
@@ -32,8 +33,8 @@
       </li>
       <li class="edit-mode">
         <input class="item-checkbox" type="checkbox">
-        <label class="edit-mode__task">Go Shopping</label>
-        <input class="edit-mode__input" type="text" value="Go Shopping">
+        <label class="edit-mode__task task">Go Shopping</label>
+        <input class="edit-mode__input task" type="text" value="Go Shopping">
         <button class="btn-edit">Save</button>
         <button class="btn-delete">
           <img class="btn-delete-icon" src="./remove.svg">
@@ -44,7 +45,7 @@
     <ul class="completed-tasks">
       <li class="completed-item">
         <input class="item-checkbox" type="checkbox" checked>
-        <label class="completed-item__task">See the Doctor</label>
+        <label class="completed-item__task task">See the Doctor</label>
         <input class="completed-item__input" type="text">
         <button class="btn-edit">Edit</button>
         <button class="btn-delete">
