feat: add alt attribute to img according to rule 1.2 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="body">
     <section class="img-details">
-      <img class="img-details__matrix" src="./eisenhower-matrix.jpg">
+      <img class="img-details__matrix" src="./eisenhower-matrix.jpg" alt="img-eisenhower-matrix">
       <a class="img-details__info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </section>
     <section class="main-page">
@@ -28,7 +28,7 @@
         <input class="blank-item input-form" type="text">
         <button class="btn-edit">Edit</button>
         <button class="btn-delete">
-          <img class="btn-delete__icon" src="./remove.svg">
+          <img class="btn-delete__icon" src="./remove.svg" alt="button to delete todo item">
         </button>
       </li>
       <li class="edit-mode task-item">
@@ -37,7 +37,7 @@
         <input class="blank-item input-form" type="text" value="Go Shopping">
         <button class="btn-edit">Save</button>
         <button class="btn-delete">
-          <img class="btn-delete__icon" src="./remove.svg">
+          <img class="btn-delete__icon" src="./remove.svg" alt="button to delete todo item">
         </button>
       </li>
     </ul>
@@ -49,7 +49,7 @@
         <input class="blank-item input-form" type="text">
         <button class="btn-edit">Edit</button>
         <button class="btn-delete">
-          <img class="btn-delete__icon" src="./remove.svg">
+          <img class="btn-delete__icon" src="./remove.svg" alt="button to delete todo item">
         </button>
       </li>
     </ul>
